{,bindings/}CMakeLists.txt: Add switch for enabling/disabling bindings (enabled by default).
 Fixes https://github.com/AyatanaIndicators/libayatana-appindicator/issues/27

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ option(ENABLE_TESTS "Enable all tests and checks" OFF)
 option(ENABLE_COVERAGE "Enable coverage reports (includes enabling all tests and checks)" OFF)
 option(ENABLE_WERROR "Treat all build warnings as errors" OFF)
 option(ENABLE_GTKDOC "Enable building GTK documentation" OFF)
+option(ENABLE_BINDINGS_VALA "Enable Vala bindings (GTK+-3.0 and beyond only)" ON)
+option(ENABLE_BINDINGS_MONO "Enable Mono bindings" ON)
 
 if(ENABLE_COVERAGE)
     set(ENABLE_TESTS ON)
@@ -111,6 +113,8 @@ endif()
 message(STATUS "Install prefix: ${CMAKE_INSTALL_PREFIX}")
 message(STATUS "GTK+-3.0 build: ${FLAVOUR_GTK3}")
 message(STATUS "GTK+-2.0 build: ${FLAVOUR_GTK2}")
+message(STATUS "Vala bindings: ${ENABLE_BINDINGS_VALA}")
+message(STATUS "Mono bindings: ${ENABLE_BINDINGS_MONO}")
 message(STATUS "Unit tests: ${ENABLE_TESTS}")
 message(STATUS "Build with -Werror: ${ENABLE_WERROR}")
 message(STATUS "API Documentation: ${ENABLE_GTKDOC}")
