.build.yml and debian/control: Sync list and order of build-dependencies (Debian and Ubuntu).

--- a/.build.yml
+++ b/.build.yml
@@ -27,9 +27,9 @@ requires:
     - g++
     - cppcheck
     - git
+    - at-spi2-core
     - cmake
     - cmake-extras
-    - mate-common
     - cli-common-dev
     - gobject-introspection
     - intltool
@@ -43,10 +43,10 @@ requires:
     - libglib2.0-dev
     - libgtk-3-dev
     - libgtk2.0-dev
+    - gtk-sharp3-gapi
+    - libgtk3.0-cil-dev
     - gtk-sharp2-gapi
     - libgtk2.0-cil-dev
-    - libgtk3.0-cil-dev
-    - gtk-sharp3-gapi
     - libdbus-1-dev
     - libdbus-glib-1-dev
     - libdbusmenu-glib-dev
@@ -59,10 +59,11 @@ requires:
     - clang
     - clang-tools
     - g++
+    - cppcheck
     - git
+    - at-spi2-core
     - cmake
     - cmake-extras
-    - mate-common
     - cli-common-dev
     - gobject-introspection
     - intltool
@@ -76,10 +77,10 @@ requires:
     - libglib2.0-dev
     - libgtk-3-dev
     - libgtk2.0-dev
+    - gtk-sharp3-gapi
+    - libgtk3.0-cil-dev
     - gtk-sharp2-gapi
     - libgtk2.0-cil-dev
-    - libgtk3.0-cil-dev
-    - gtk-sharp3-gapi
     - libdbus-1-dev
     - libdbus-glib-1-dev
     - libdbusmenu-glib-dev
