--- a/debian/control
+++ b/debian/control
@@ -27,12 +27,13 @@ Build-Depends: debhelper (>= 9),
                libgtk3.0-cil-dev [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64],
                gtk-sharp2-gapi [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64],
                libgtk2.0-cil-dev [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64],
+               libdbus-1-dev,
                libdbus-glib-1-dev (>= 0.82),
                libayatana-indicator-dev (>= 0.6.0-0~),
                libayatana-indicator3-dev (>= 0.6.0-0~),
                libdbusmenu-glib-dev (>= 0.5.90),
-               libdbusmenu-gtk-dev (>= 0.5.90),
                libdbusmenu-gtk3-dev (>= 0.5.90),
+               libdbusmenu-gtk-dev (>= 0.5.90),
                libgirepository1.0-dev,
 Standards-Version: 4.5.0
 Homepage: https://github.com/AyatanaIndicators/libayatana-appindicator
