.build.yml: Drop local builds of ayatana-ido and libayatana-indicator. They confuse cppcheck.

--- a/.build.yml
+++ b/.build.yml
@@ -115,6 +115,8 @@ before_scripts:
   - cmake . -DCMAKE_INSTALL_PREFIX=/usr
   - make
   - make install
+  - cd ../
+  - rm -Rf ayatana-ido-build/
   -
   - cd ${START_DIR}
   - if [ ! -d libayatana-indicator-build ]; then
@@ -133,6 +135,8 @@ before_scripts:
   - make
   - make install
   - cd -
+  - cd ../
+  - rm -Rf libayatana-indicator-build/
 
 build_scripts:
   - if [ ${DISTRO_NAME} == "debian" ];then
