.build.yml: Fix building and running unit tests (mixed up of && and ||).

--- a/.build.yml
+++ b/.build.yml
@@ -147,7 +147,7 @@ build_scripts:
   - if [ -e ./CMakeLists.txt ]; then
   -     mkdir -p build/gtk3/
   -     cd build/gtk3/
-  -     if [ ${DISTRO_NAME} == "debian" ] && [ ${DISTRO_NAME} == "ubuntu" ]; then
+  -     if [ ${DISTRO_NAME} == "debian" ] || [ ${DISTRO_NAME} == "ubuntu" ]; then
   -         scan-build $CHECKERS cmake ../../ -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_VERBOSE_MAKEFILE=ON -DENABLE_TESTS=ON -DFLAVOUR_GTK3=ON
   -     else
   -         scan-build $CHECKERS cmake ../../ -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_VERBOSE_MAKEFILE=ON -DFLAVOUR_GTK3=ON
@@ -155,7 +155,7 @@ build_scripts:
   -     cd -
   -     mkdir -p build/gtk2/
   -     cd build/gtk2/
-  -     if [ ${DISTRO_NAME} == "debian" ] && [ ${DISTRO_NAME} == "ubuntu" ]; then
+  -     if [ ${DISTRO_NAME} == "debian" ] || [ ${DISTRO_NAME} == "ubuntu" ]; then
   -         scan-build $CHECKERS cmake ../../ -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_VERBOSE_MAKEFILE=ON -DENABLE_TESTS=ON -DFLAVOUR_GTK2=ON
   -     else
   -         scan-build $CHECKERS cmake ../../ -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_VERBOSE_MAKEFILE=ON -DFLAVOUR_GTK2=ON
@@ -204,7 +204,7 @@ build_scripts:
 after_scripts:
   - if [ ${BUILD_TYPE} == "scripts" ];then
   -     XVFB_RUN="$(which xvfb-run || true)"
-  -     if [ ${DISTRO_NAME} == "debian" ] && [ ${DISTRO_NAME} == "ubuntu" ]; then
+  -     if [ ${DISTRO_NAME} == "debian" ] || [ ${DISTRO_NAME} == "ubuntu" ]; then
   -         if [ -e ./CMakeLists.txt ]; then
   -             cd build/gtk3/
   -             ${XVFB_RUN} env CTEST_OUTPUT_ON_FAILURE=1 make test
