CMakeLists.txt: Fix gtkdoc-scan binary name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,9 +66,9 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(PROJECT_DEPS REQUIRED ${DEPS})
 
 if (ENABLE_GTKDOC)
-    find_program (GTKDOC "gtk-doc")
+    find_program (GTKDOC "gtkdoc-scan")
     if (NOT GTKDOC_FOUND)
-        message(WARNING "Building the gtk-doc API documentation is enabled, but the gtk-doc executable has not been found.  Disabling API documentation building, although requested.")
+        message(WARNING "Building the gtk-doc API documentation is enabled, but the gtkdoc-scan executable has not been found.  Disabling API documentation building, although requested.")
         set (ENABLE_GTKDOC OFF)
     endif()
 endif()
