debian/rules: Unset DBUS_SESSION_BUS_ADDRESS before running tests.

--- a/debian/rules
+++ b/debian/rules
@@ -67,6 +67,7 @@ override_dh_auto_test:
 	export HOME=$(CURDIR)/debian/tmphome-gtk3 \
 	    && export XDG_DATA_HOME=$(CURDIR)/debian/tmphome-gtk3/.local/share \
 	    && export XDG_CACHE_HOME=$(CURDIR)/debian/tmphome-gtk3/.cache \
+	    && unset DBUS_SESSION_BUS_ADDRESS \
 	    && dh_auto_test --no-parallel --builddirectory=build/gtk3
 	# View test's log file for better debugging of problems when built in clean chroots.
 	if [ -e build/gtk3/tests/test-suite.log ]; then cat build/gtk3/tests/test-suite.log; fi
@@ -77,6 +78,7 @@ override_dh_auto_test:
 	export HOME=$(CURDIR)/debian/tmphome-gtk2 \
 	    && export XDG_DATA_HOME=$(CURDIR)/debian/tmphome-gtk2/.local/share \
 	    && export XDG_CACHE_HOME=$(CURDIR)/debian/tmphome-gtk2/.cache \
+	    && unset DBUS_SESSION_BUS_ADDRESS \
 	    && dh_auto_test --no-parallel --builddirectory=build/gtk2
 	# View test's log file for better debugging of problems when built in clean chroots.
 	if [ -e build/gtk2/tests/test-suite.log ]; then cat build/gtk2/tests/test-suite.log; fi
