--- a/src/ayatana-appindicator-0.1.pc.in
+++ b/src/ayatana-appindicator-0.1.pc.in
@@ -1,14 +1,13 @@
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-bindir=@bindir@
-includedir=@includedir@
+prefix=@CMAKE_INSTALL_PREFIX@
+exec_prefix=${prefix}
+libdir=@CMAKE_INSTALL_FULL_LIBDIR@
+bindir=@CMAKE_INSTALL_FULL_BINDIR@
+includedir=@CMAKE_INSTALL_FULL_INCLUDEDIR@
 
 Cflags: -I${includedir}/libayatana-appindicator-0.1
-Requires: ayatana-indicator-0.4 dbusmenu-glib-0.4 gtk+-2.0
+Requires: ayatana-indicator-0.4 dbusmenu-glib-0.4 glib-2.0 gtk+-2.0
 Libs: -L${libdir} -layatana-appindicator
 
 Name: ayatana-appindicator-0.1
-Description: Ayatana Application Indicators
+Description: Ayatana Application Indicators (for GTK-2+)
 Version: @VERSION@
-
