--- a/src/ayatana-appindicator3-0.1.pc.in
+++ b/src/ayatana-appindicator3-0.1.pc.in
@@ -9,6 +9,6 @@ Requires: ayatana-indicator3-0.4 dbusmenu-glib-0.4 glib-2.0 gtk+-3.0
 Libs: -L${libdir} -layatana-appindicator3
 
 Name: ayatana-appindicator3-0.1
-Description: Ayatana Application Indicators
+Description: Ayatana Application Indicators (for GTK-3+)
 Version: @PROJECT_VERSION@
 
